# FathomNet

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: _worms_cache.json  convnext_small_randaugment.yaml  convnext_small_randaugment_long.yaml  convnext_threeheads.yaml  convnext_threeheads_balanced.yaml  convnext_threeheads_focal.yaml  convnext_threeheads_mixup.yaml  convnext_threeheads_randaugment.yaml  convnext_threeheads_randaugment_mid.yaml  convnext_threeheads_randaugment_mid_long.yaml  convnext_threeheads_staged.yaml  resnet50_threeheads.yaml  resnet50_threeheads_amp.yaml  resnet50_threeheads_classbalanced.yaml  resnet50_threeheads_consistency.yaml  resnet50_threeheads_consistency_high.yaml  resnet50_threeheads_focal.yaml  resnet50_threeheads_parentgate.yaml  taxonomy_map.json  vit_threeheads.yaml
docs/: COMMAND_LOG.md
reports/: README.md  amp_run.md  baseline_run.md  class_balanced_run.md  consistency_run.md  consistency_tuning.md  convnext_balanced_run.md  convnext_focal_run.md  convnext_mixup_run.md  convnext_randaugment_mid_run.md  convnext_randaugment_run.md  convnext_run.md  convnext_small_long_run.md  convnext_small_run.md  convnext_staged_run.md  convnext_tiny_long_run.md  experiments.md  focal_run.md  parent_gate_run.md  vit_run.md
scripts/: build_taxonomy_map.py  compare_vs_teammate.py  download_real_images.py  plot_val_acc.py  prepare_from_coco.py
src/train/: lightning_module.py  train.py
