[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fathomnet-hcls"
version = "0.1.0"
description = "Hierarchy-consistent marine species recognition"
authors = [{ name = "Team 27" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "B"]
